ceph: make the placement of admission controller configurable
If users want to restrict the nodes where Ceph daemons should exist,
it's better to make the placement of admission controller configurable
as other daemons.

Signed-off-by: Satoru Takeuchi <satoru.takeuchi@gmail.com>

--- a/cluster/charts/rook-ceph/templates/deployment.yaml
+++ b/cluster/charts/rook-ceph/templates/deployment.yaml
@@ -240,6 +240,16 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+{{- if .Values.admissionController }}
+{{- if .Values.admissionController.tolerations }}
+        - name: ADMISSION_CONTROLLER_TOLERATIONS
+          value: {{ toYaml .Values.admissionController.tolerations | quote }}
+{{- end }}
+{{- if .Values.admissionController.nodeAffinity }}
+        - name: ADMISSION_CONTROLLER_NODE_AFFINITY
+          value: {{ .Values.admissionController.nodeAffinity }}
+{{- end }}
+{{- end }}
 {{- if .Values.unreachableNodeTolerationSeconds }}
         - name: ROOK_UNREACHABLE_NODE_TOLERATION_SECONDS
           value: {{ .Values.unreachableNodeTolerationSeconds | quote }}
